començando a parte de tranferencia de alunos

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -395,10 +395,28 @@
                                 <div class="mt-3">
                                   <h4 id="mostraNomeAluno">Nome</h4>
                                   <p class="text-secondary mb-1" id="mostraIdadeAluno">Idade</p>
-                                  <p class="text-secondary mb-1" id="mostraTurmaAluno">Turma</p>
+                                  <label class="text-secondary mb-1" id="mostraTurmaAluno">Turma</label><span data-feather="git-pull-request" data-toggle="tooltip" data-placement="top" title="Transferir aluno" onclick="document.getElementById('areaTransfereAluno').style.display = 'block', carregaProfsETurmas()"></span>
+                                  <div class="form-row" id="areaTransfereAluno" style="display: none;">
+                                    <form id="transfereAluno" onkeydown="return event.key != 'Enter';">
+                                      <div class="form-group col-auto">
+                                        <label for="inputAddress">Turma</label>
+                                        <select class="form-control" name="turmaAluno" id="turmaAluno" onclick="mostraProfsAlunoESetaTurma(this.value)">
+                                          <option hidden selected>Escolha a turma...</option>
+                                          
+                                        </select>
+                                        <label for="inputAddress">Prof. Referência</label>
+                                        <!-- <img src="../images/profile_placeholder.png" id="fotoProfAbaCadastroAluno" class="rounded" width="32px" style="margin-right: 10px;"> -->
+                                        <select class="form-control" disabled name="profAluno" id="profAluno">
+                                          <option hidden selected>...</option>
+                                          
+                                        </select>
+                                        <button class="btn btn-primary" type="submit">Transferir aluno</button>
+                                      </div>
+                                    </form>
+                                  </div>
                                   <p class="text-muted font-size-sm" id="mostraHoraEDiasAluno">Horário e dia de aula</p>
-                                  <button class="btn btn-primary">Follow Up</button>
-                                  <button class="btn btn-outline-primary" >Responsáveis</button>
+                                  <button class="btn btn-primary" onclick="AstNotif.dialog('Oiii...', 'Aqui é o Gustavo, e essa área ainda não foi desenvolvida ok! Volte aqui mais tarde.')">Follow Up</button>
+                                  <button class="btn btn-outline-primary" onclick="AstNotif.dialog('Oiii...', 'Aqui é o Gustavo, e essa área ainda não foi desenvolvida ok! Volte aqui mais tarde.')">Responsáveis</button>
                                 </div>
                               </div>
                             </div>
@@ -415,15 +433,15 @@
                               </li>
                               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                 <h6 class="mb-0"><span data-feather="calendar"></span> Data de Nasc.</h6>
-                                <span class="text-secondary" id="mostraDataNascimentoAluno">@bootdey</span>
+                                <span class="text-secondary" id="mostraDataNascimentoAluno">Data do Aluno</span>
                               </li>
                               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>Instagram</h6>
-                                <span class="text-secondary">bootdey</span>
+                                <h6 class="mb-0"><span data-feather="file-text"></span> ...</h6>
+                                <span class="text-secondary">...</span>
                               </li>
                               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h6>
-                                <span class="text-secondary">bootdey</span>
+                                <h6 class="mb-0"><span data-feather="file-text"></span>...</h6>
+                                <span class="text-secondary">...</span>
                               </li>
                             </ul>
                           </div>
@@ -481,24 +499,24 @@
                             <div class="col-sm-6 mb-3">
                               <div class="card h-100">
                                 <div class="card-body">
-                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
-                                  <small>Web Design</small>
+                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Desempenho</i>do aluno</h6>
+                                  <small>Audição</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
-                                  <small>Website Markup</small>
+                                  <small>Fala</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
-                                  <small>One Page</small>
+                                  <small>Escrita</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
-                                  <small>Mobile Template</small>
+                                  <small>...</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
-                                  <small>Backend API</small>
+                                  <small>...I</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
@@ -508,24 +526,24 @@
                             <div class="col-sm-6 mb-3">
                               <div class="card h-100">
                                 <div class="card-body">
-                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">assignment</i>Project Status</h6>
-                                  <small>Web Design</small>
+                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Notas</i>do aluno</h6>
+                                  <small>...</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
-                                  <small>Website Markup</small>
+                                  <small>...</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
-                                  <small>One Page</small>
+                                  <small>...</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
-                                  <small>Mobile Template</small>
+                                  <small>...</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
-                                  <small>Backend API</small>
+                                  <small>...</small>
                                   <div class="progress mb-3" style="height: 5px">
                                     <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
                                   </div>
