função follow up apenas no inicio versao 0.57

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -415,7 +415,7 @@
                                     </form>
                                   </div>
                                   <p class="text-muted font-size-sm" id="mostraHoraEDiasAluno">Horário e dia de aula</p>
-                                  <button class="btn btn-primary" onclick="AstNotif.dialog('Oiii...', 'Aqui é o Gustavo, e essa área ainda não foi desenvolvida ok! Volte aqui mais tarde.')">Follow Up</button>
+                                  <button class="btn btn-primary" onclick="followUpAluno(`${document.getElementById('mostraMatriculaAluno').innerText}`)">Follow Up</button>
                                   <button class="btn btn-outline-primary" onclick="AstNotif.dialog('Oiii...', 'Aqui é o Gustavo, e essa área ainda não foi desenvolvida ok! Volte aqui mais tarde.')">Responsáveis</button>
                                 </div>
                               </div>
