--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -392,9 +392,11 @@
                             <div class="card-body">
                               <div class="d-flex flex-column align-items-center text-center">
                                 <img src="../images/profile_placeholder.png" alt="Imagem do aluno" class="rounded-circle" width="150" id="mostraFotoAluno">
+                                
                                 <div class="mt-3">
                                   <h4 id="mostraNomeAluno">Nome</h4>
                                   <p class="text-secondary mb-1" id="mostraIdadeAluno">Idade</p>
+                                  <input type="text" id="rolaTelaAbaixoAlunos" style="display: none;">
                                   <label class="text-secondary mb-1" id="mostraTurmaAluno">Turma</label><span data-feather="git-pull-request" data-toggle="tooltip" data-placement="top" title="Transferir aluno" onclick="document.getElementById('areaTransfereAluno').style.display = 'block', carregaProfsETurmas()"></span>
                                   <div class="form-row" id="areaTransfereAluno" style="display: none;">
                                     <form id="transfereAluno" onkeydown="return event.key != 'Enter';">
@@ -417,6 +419,7 @@
                                   <p class="text-muted font-size-sm" id="mostraHoraEDiasAluno">Horário e dia de aula</p>
                                   <button class="btn btn-primary" onclick="followUpAluno(`${document.getElementById('mostraMatriculaAluno').innerText}`)">Follow Up</button>
                                   <button class="btn btn-outline-primary" onclick="AstNotif.dialog('Oiii...', 'Aqui é o Gustavo, e essa área ainda não foi desenvolvida ok! Volte aqui mais tarde.')">Responsáveis</button>
+                                  
                                 </div>
                               </div>
                             </div>
