--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -619,6 +619,7 @@
                     
                   </div>
                 </div>
+                <button type="button" class="btn btn-warning" id="btnTransfereAlunosTurma">Transferir alunos selecionados</button>
                 <hr>
                 <p class="text-muted float-md-right" id="timestampTurmaCadastrada"></p>
                 
