--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -58,7 +58,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" onclick="carregaListaDeAlunos()">
+                  <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunosResponsivo" onclick="carregaListaDeAlunos()">
                     <span data-feather="users" ></span>
                     Alunos
                   </a>
@@ -157,7 +157,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" onclick="carregaListaDeAlunos()">
+                <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunos" onclick="carregaListaDeAlunos()">
                   <span data-feather="users" ></span>
                   Alunos
                 </a>
