--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -531,7 +531,39 @@
                     </div>
                     <hr>
                     <p class="text-muted float-md-right" id="timestampDoAluno"></p>
-                </div>
+                    <br>
+                    <hr>
+                    <label class="h5">Histórico de operações</label>
+                    <br>
+                    <div class="col">
+                      <div class="container">
+                        <div class="row">
+                          <div class="form-group col-auto">
+                            <label for="inputAddress">Campo de busca</label>
+                            <input class="form-control" type="search" placeholder="Digite a busca..." aria-label="Search" onchange="carregaListaDeAlunos(maiusculo(this))">
+                          </div>
+                          <div class="form-group col-auto">
+                            <label for="inputAddress">Buscar por:</label>
+                            <select class="form-control" name="tipoDeBusca" id="tipoDeBuscaHistoricoAluno" onchange="alteraTipoDeBusca(this.value)">
+                              <option selected value="nomeAluno">Nome do aluno</option>
+                              <option value="matriculaAluno">Número de matrícula</option>
+                              <option value="cpfAluno">CPF do aluno</option>
+                              <option value="rgAluno">RG do aluno</option>
+                              <option value="emailAluno">E-mail do aluno</option>
+                              <option value="celularAluno">Celular do aluno</option>
+                              <option value="telefoneAluno">Telefone do aluno</option>
+                            </select>
+                            
+                          </div>
+                        </div> 
+                      </div>
+                      <div class="overflow-auto" style="height: fit-content; max-height: 280px;">
+                        <div class="list-group" id="listaHistoricoAluno">
+                          
+                        </div>
+                      </div>
+                  </div>
+              </div>
             </div>
 
             <div class="container tab-pane fade" id="abaTurmas" role="tabpanel" aria-labelledby="Turmas">
