criação função ativa desativa alunos, acabou a luz aqui em casa kkkkkk

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -623,8 +623,9 @@
                     
                   </div>
                 </div>
-                <button type="button" class="btn btn-warning" id="btnTransfereAlunosTurma">Transferir alunos selecionados</button>
+                <button type="button" class="btn btn-info" id="btnTransfereAlunosTurma" disabled>Transferir alunos</button>
                 <button type="button" class="btn btn-danger" id="btnExcluirTurma" onclick="excluirTurma()">Excluir turma</button>
+                <button type="button" class="btn btn-warning" id="btnDesativaAlunos" onclick="desativaAlunos()" disabled>Desativar Alunos</button>
                 <hr>
                 <p class="text-muted float-md-right" id="timestampTurmaCadastrada"></p>
                 
