ainda consertar problemas com o chat

--- a/public/login.html
+++ b/public/login.html
@@ -108,7 +108,7 @@
           </div>
           <div class="form-group col-md-6">
             <label for="inputPassword4">Senha</label>
-            <input type="password" name="senha" class="form-control" id="inputPassword4" placeholder="Password">
+            <input type="password" name="senha" class="form-control" id="inputPassword4" placeholder="Senha">
           </div>
           <button type="submit" class="btn btn-primary btn-block" id="btnEntrar">Entrar</button>
           <small id="cadastrarEntrar" class="form-text text-muted">
