--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -46,6 +46,26 @@
       </div>
     </div>
 
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" id="matriculaModal">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="tituloMatricula">Ficha de matrícula - PDF</h5>
+            <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button> -->
+          </div>
+          <div class="modal-body" id="corpoMatricula">
+            <iframe src="../resources/pdfsProntos/matriculaPdf.html" frameborder="0"></iframe>
+          </div>
+          <div class="modal-footer" id="botoesMatricula">
+            <button type="button" class="btn btn-primary">Imprimir</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     
 
           <!-- Inicialização do Firebase -->
@@ -309,6 +329,9 @@
           <!-- <canvas class="my-4" id="myChart" width="900" height="380"></canvas> -->
           <div class="tab-content" id="nav-tabContent">
             <div class="container tab-pane fade show active" id="abaDashboard" role="tabpanel" aria-labelledby="Dashboard">
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#matriculaModal">
+                Launch demo modal
+              </button>
               <div class="row">
                 <div class="col-sm-auto">
                   <h2>Tabela semanal de alunos</h2>
