gera pdf matricula versao 0.81

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -465,6 +465,9 @@
                                   <p class="text-muted font-size-sm" id="mostraHoraEDiasAluno">Horário e dia de aula</p>
                                   <button class="btn btn-primary" onclick="followUpAluno(`${document.getElementById('mostraMatriculaAluno').innerText}`)">Follow Up</button>
                                   <button class="btn btn-outline-primary" onclick="mostraDadosResponsaveis()">Responsáveis</button>
+                                  <br><br>
+                                  <section id="secGeraFicha"></section>
+                                  
                                   
                                 </div>
                               </div>
