--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
             <a class="nav-link" href="secretaria/">Secretaria</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="professores.html">Professores</a>
+            <a class="nav-link" href="professores/">Professores</a>
           </li>
         </ul>
       </div>
