--- a/public/login.html
+++ b/public/login.html
@@ -58,16 +58,13 @@
               <a class="nav-link" href="login.html">Login <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="secretaria/">Administração</a>
+              <a class="nav-link" href="adm/">Administração</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="secretaria/">Secretaria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Professores</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" onclick="window.location.reload(true)">&nbsp;&nbsp;Atualizar sistemas</a>
+              <a class="nav-link" href="professores/">Professores</a>
             </li>
           </ul>
         </div>
