professores vêem apenas lista de alunos deles versao 0.83

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -103,7 +103,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunosResponsivo" >
+                  <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunosResponsivo" onclick="carregaListaDeAlunos()">
                     <span data-feather="users" ></span>
                     Alunos
                   </a>
@@ -218,7 +218,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunos">
+                <a class="nav-link" data-toggle="list" href="#abaAlunos" role="tab" aria-controls="alunos" id="btnAbaAlunos" onclick="carregaListaDeAlunos()">
                   <span data-feather="users" ></span>
                   Alunos
                 </a>
