--- a/public/resources/pdfsProntos/matriculaPdf.html
+++ b/public/resources/pdfsProntos/matriculaPdf.html
@@ -193,8 +193,8 @@ a:visited {text-decoration:none;}
 					<div class="stl_01" style="top: 30.8734em; left:40.0083em;"><span class="stl_14 stl_08" style="word-spacing:0em;">Das _______à<span class="stl_13">s &nbsp;</span></span></div>
 					<div class="stl_01" style="top: 30.9272em; left:3em;"><span class="stl_07" style="font-weight:bold;">_</span></div>
 					<div class="stl_01" style="top: 31.7934em; left:40.0083em;"><span class="stl_14">________ &nbsp;</span></div>
-					<div class="stl_01" style="top: 32.7572em; left:3.19em;"><span class="stl_07 stl_08" style="font-weight:bold; word-spacing:0em;">DIAS E HORARIO<span class="stl_09">S &nbsp;</span></span></div>
-					<div class="stl_01" style="top: 33.7672em; left:3em;"><span class="stl_07 stl_08" style="font-weight:bold;">DISPONIVEIS<span class="stl_09">: &nbsp;</span></span></div>
+					<div class="stl_01" style="top: 32.7572em; left:3.19em;"><span class="stl_07 stl_08" style="font-weight:bold; word-spacing:0em;">DIAS E HORARIO<span class="stl_09">S DISPONIVEIS:&nbsp;</span></span></div>
+					
 					<div class="stl_01" style="top: 32.7572em; left:23.9342em;"><span class="stl_07" style="font-weight:bold; word-spacing:0.03em;">DADOS ADICIONAIS &nbsp;</span></div>
 					<div class="stl_01" style="top: 34.5872em; left:14.4917em;"><span class="stl_10" style="word-spacing:0.94em;">____:____ ____:____ &nbsp;</span></div>
 					<div class="stl_01" style="top: 36.1072em; left:14.4917em;"><span class="stl_10" style="word-spacing:0.94em;">____:____ ____:____ &nbsp;</span></div>
@@ -203,19 +203,19 @@ a:visited {text-decoration:none;}
 					<div class="stl_01" style="top: 40.6889em; left:14.4917em;"><span class="stl_10" style="word-spacing:0.94em;">____:____ ____:____ &nbsp;</span></div>
 					<div class="stl_01" style="top: 42.2189em; left:14.4917em;"><span class="stl_10" style="word-spacing:0.94em;">____:____ ____:____ &nbsp;</span></div>
 					<div class="stl_01" style="top: 34.7872em; left:23.9342em;"><span class="stl_07" style="font-weight:bold; word-spacing:0.02em;">Possui alguma alergia? Se sim qual? _____________________ &nbsp;</span></div>
-					<div class="stl_01" style="top: 35.8731em; left:4.5em;"><span class="stl_15">□</span></div>
-					<div class="stl_01" style="top: 37.3931em; left:4.5em;"><span class="stl_15">□</span></div>
-					<div class="stl_01" style="top: 38.9248em; left:4.5em;"><span class="stl_15">□</span></div>
-					<div class="stl_01" style="top: 40.4448em; left:4.5em;"><span class="stl_15">□</span></div>
-					<div class="stl_01" style="top: 41.9748em; left:4.5em;"><span class="stl_15">□</span></div>
-					<div class="stl_01" style="top: 43.4948em; left:4.5em;"><span class="stl_15">□</span></div>
-					<div class="stl_01" style="top: 35.7072em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">SEGUNDA-FEI<span class="stl_09">RA &nbsp;</span></span></div>
+					<div class="stl_01" style="top: 34.5872em; left:4.5em;"><span class="stl_15">□</span></div>
+					<div class="stl_01" style="top: 36.1072em; left:4.5em;"><span class="stl_15">□</span></div>
+					<div class="stl_01" style="top: 37.6372em; left:4.5em;"><span class="stl_15">□</span></div>
+					<div class="stl_01" style="top: 39.1589em; left:4.5em;"><span class="stl_15">□</span></div>
+					<div class="stl_01" style="top: 40.6889em; left:4.5em;"><span class="stl_15">□</span></div>
+					<div class="stl_01" style="top: 42.2189em; left:4.5em;"><span class="stl_15">□</span></div>
+					<div class="stl_01" style="top: 34.5872em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">SEGUNDA-FEI<span class="stl_09">RA &nbsp;</span></span></div>
 					<div class="stl_01" style="top: 36.8172em; left:23.9342em;"><span class="stl_07 stl_08" style="font-weight:bold; word-spacing:0em;">Toma remedios controlados? Se sim qual e com que fr<span class="stl_09">equencia? &nbsp;</span></span></div>
-					<div class="stl_01" style="top: 37.2272em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">TERÇA-FEIR<span class="stl_09">A &nbsp;</span></span></div>
-					<div class="stl_01" style="top: 38.7589em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">QUARTA-FEIR<span class="stl_09">A &nbsp;</span></span></div>
-					<div class="stl_01" style="top: 40.2789em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">QUINTA-FEIR<span class="stl_09">A &nbsp;</span></span></div>
-					<div class="stl_01" style="top: 41.8089em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">SEXTA-FEIR<span class="stl_09">A &nbsp;</span></span></div>
-					<div class="stl_01" style="top: 43.3289em; left:5.632em;"><span class="stl_07" style="font-weight:bold;">SÁBADO &nbsp;</span></div>
+					<div class="stl_01" style="top: 36.1072em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">TERÇA-FEIR<span class="stl_09">A &nbsp;</span></span></div>
+					<div class="stl_01" style="top: 37.6372em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">QUARTA-FEIR<span class="stl_09">A &nbsp;</span></span></div>
+					<div class="stl_01" style="top: 39.1589em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">QUINTA-FEIR<span class="stl_09">A &nbsp;</span></span></div>
+					<div class="stl_01" style="top: 40.6889em; left:5.632em;"><span class="stl_07 stl_08" style="font-weight:bold;">SEXTA-FEIR<span class="stl_09">A &nbsp;</span></span></div>
+					<div class="stl_01" style="top: 42.2189em; left:5.632em;"><span class="stl_07" style="font-weight:bold;">SÁBADO &nbsp;</span></div>
 					<div class="stl_01" style="top: 37.8372em; left:23.9342em;"><span class="stl_07 stl_08" style="font-weight:bold;">____________________________________________<span class="stl_09">_______ &nbsp;</span></span></div>
 					<div class="stl_01" style="top: 39.8789em; left:23.9342em;"><span class="stl_07 stl_08" style="font-weight:bold; word-spacing:0em;">Possui intolerância a algum alimento? Se si<span class="stl_09">m qual? &nbsp;</span></span></div>
 					<div class="stl_01" style="top: 40.8889em; left:24.3442em;"><span class="stl_07 stl_08" style="font-weight:bold;">___________________________________________<span class="stl_09">_______ &nbsp;</span></span></div>
